ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "alb-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
  labels:
    app: comingsoon-page
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "comingsoon-page"
              servicePort: 80
